--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "deepcopy": "^2.1.0",
+    "element-plus": "^2.2.5",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -18,7 +20,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0"
   },
   "eslintConfig": {
     "root": true,
