--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "deepcopy": "^2.1.0",
     "element-plus": "^2.2.5",
+    "html2canvas": "^1.4.1",
     "mitt": "^3.0.0",
     "vue": "^3.2.13"
   },
